--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="value" id="outCost">—</div>
         </div>
 
-        <!-- ✅ NUOVO: TOGGLE + % -->
+        <!-- ✅ TOGGLE + % -->
         <div class="price">
           <div class="label">Modalità</div>
           <select id="markupMode" style="width:100%; margin-top:6px;">
@@ -215,7 +215,7 @@
           </div>
         </div>
 
-        <!-- ✅ NUOVO: PREZZO CLIENTE -->
+        <!-- ✅ PREZZO CLIENTE -->
         <div class="price">
           <div class="label">Prezzo cliente</div>
           <div class="value" id="outClientPrice">—</div>
