--- a/index.html
+++ b/index.html
@@ -266,6 +266,11 @@
         <div class="meta">
           <div class="label">Riepilogo</div>
           <pre id="outText">Carica dati…</pre>
+
+          <div class="share-actions" style="display:flex; gap:10px; margin-top:10px; flex-wrap:wrap;">
+            <button id="btnShareWA" class="secondary" disabled>Invia via WhatsApp</button>
+            <button id="btnExportTxt" class="secondary" disabled>Scarica TXT</button>
+          </div>
         </div>
       </div>
 
