--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
           <pre id="outText">Carica dati…</pre>
 
           <div class="share-actions" style="display:flex; gap:10px; margin-top:10px; flex-wrap:wrap;">
+            <button id="btnShare" class="secondary" disabled>Condividi</button>
             <button id="btnShareWA" class="secondary" disabled>Invia via WhatsApp</button>
             <button id="btnExportTxt" class="secondary" disabled>Scarica TXT</button>
           </div>
